--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/moment-timezone": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@reduxjs/toolkit": "^2.2.1",
+    "@syncfusion/ej2-react-schedule": "^25.1.37",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "js-cookie": "^3.0.5",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^1.43.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
