--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@bitnoi.se/react-scheduler": "^0.1.5",
+    "@date-io/date-fns": "^3.0.0",
     "@devexpress/dx-react-scheduler": "^4.0.8",
     "@devexpress/dx-react-scheduler-material-ui": "^4.0.8",
     "@emotion/react": "^11.11.4",
@@ -17,6 +18,8 @@
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@mui/x-date-pickers": "^7.3.1",
+    "@mui/x-date-pickers-pro": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@syncfusion/ej2-react-schedule": "^25.1.37",
     "@testing-library/jest-dom": "^5.17.0",
