--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bitnoi.se/react-scheduler": "^0.1.5",
+    "@devexpress/dx-react-scheduler": "^4.0.8",
+    "@devexpress/dx-react-scheduler-material-ui": "^4.0.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.11",
@@ -10,6 +13,7 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/moment-timezone": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/resource-timeline": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
@@ -20,8 +24,12 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.6",
+    "react-clock": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-datepicker": "^2.0.3",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
