--- a/package.json
+++ b/package.json
@@ -24,18 +24,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/all": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
     "aos": "^2.3.4",
+    "exceljs": "^4.4.0",
     "js-cookie": "^3.0.5",
+    "jspdf-autotable": "^3.8.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
     "react-clock": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-horizontal-datepicker": "^2.0.3",
+    "react-icons": "^5.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
