--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-export-table-to-excel": "^1.0.6",
     "react-horizontal-datepicker": "^2.0.3",
     "react-icons": "^5.2.0",
+    "react-loading": "^2.0.3",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
